--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/GuptaSumit123/SUB-ASSEMBLY-FOR-MHSF" class="block-20 zoom-effect" style="background-image: url('images/Proj_4.jpg');">
+				<a href="https://github.com/GuptaSumit123/SUB-ASSEMBLY-FOR-MHSF" class="block-20 zoom-effect" style="background-image: url('images/p
+					roj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
